ensure markdown preview does not overflow

--- a/app/assets/stylesheets/components/forms/_markdown_editor.css.sass
+++ b/app/assets/stylesheets/components/forms/_markdown_editor.css.sass
@@ -22,6 +22,11 @@ $markdown-guide-height: 25px
   +border-radius
   padding: 7px
   min-height: $markdown-editor-height
+  max-width: 700px
+  overflow: hidden
+  word-wrap: break-word
+  white-space: pre-wrap
+  overflow-wrap: break-word
   p:first-child
     margin-top: 0
 
